# create-vite-rs

./: Cargo.toml  README.md  deny.toml
src/: data.json  lib.rs  main.rs  template.rs
